src/test/kubernetes/proxy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: proxy
  namespace: default
data:
  cert.pem: |-
    -----BEGIN CERTIFICATE-----
    MIIFGTCCAwGgAwIBAgIUaaMOCrHyxjT2TddfGBkH3RVKI/MwDQYJKoZIhvcNAQEL
[...]
    uzohcPgHAfcMAXpsaw==
    -----END CERTIFICATE-----
  key.pem: |-
    -----BEGIN PRIVATE KEY-----
    MIIJRAIBADANBgkqhkiG9w0BAQEFAASCCS4wggkqAgEAAoICAQDBPUzKHzK2fFWJ
[...]
    ZUc0tZ7nCRHbm1F0skvhcjiQGf8DDy+Y
    -----END PRIVATE KEY-----
  nginx.conf: |-
    user  nginx;
    worker_processes  1;

    error_log  /var/log/nginx/error.log warn;
    pid        /var/run/nginx.pid;

    events {
      worker_connections  1024;  ## Default: 1024, increase if you have lots of clients
    }

    http {
      # fallback in case we can't determine a type
      default_type  application/octet-stream;

      log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
      '$status $body_bytes_sent "$http_referer" '
      '"$http_user_agent" "$http_x_forwarded_for"';

      access_log  /var/log/nginx/access.log  main;

      sendfile        on;
      #tcp_nopush     on;

      keepalive_timeout  65;

      server {
        listen 443 ssl;
        server_name proxy.default.svc.cluster.local;

        ssl_certificate           /etc/nginx/cert.pem;
        ssl_certificate_key       /etc/nginx/key.pem;

        ssl_session_cache  builtin:1000  shared:SSL:10m;
        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
        ssl_prefer_server_ciphers on;

        access_log            /var/log/nginx/proxy.access.log;

        location / {
          proxy_set_header        Host $host;
          proxy_set_header        X-Real-IP $remote_addr;
          proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header        X-Forwarded-Proto $scheme;

          # Fix the “It appears that your reverse proxy set up is broken" error.
          proxy_pass          http://192.168.0.186:8081;
          #proxy_pass          http://10.0.10.147:8081;
          proxy_read_timeout  90;
        }
      }
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: default
spec:
  selector:
    matchLabels:
      app: proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - image: nginx:latest
          name: proxy
          imagePullPolicy: Always
          volumeMounts:
          - name: config
            mountPath: /etc/nginx
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: proxy
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: default
spec:
  selector:
    app: proxy
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: apiregistration.k8s.io/v1
kind: APIService
metadata:
  name: v1alpha1.operator.enonic.cloud
spec:
  group: operator.enonic.cloud
  groupPriorityMinimum: 1000
  versionPriority: 15
  caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZHVENDQXdHZ0F3SUJBZ0lVYWFNT0NySHl4alQyVGRkZkdCa0gzUlZLSS9Nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JjSEp2ZUhrdVpHVm1ZWFZzZEM1emRtTXdIaGNOTWpBd05qRTNNVEV5TWpRMwpXaGNOTXpBd05qRTFNVEV5TWpRM1dqQWNNUm93R0FZRFZRUUREQkZ3Y205NGVTNWtaV1poZFd4MExuTjJZekNDCkFpSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBTUU5VE1vZk1yWjhWWWxOcWFmcS9qaGUKbnFGZFVsUW9MZ044dWJuYmNYTVlSSFpoVm5ydGI5K3IwV3JBaThQMVNGck8rMWdYYWtpRDI3Qis2M201RUtubgpOb0ZrdVFDOVRnUGF [...]
  service:
    name: proxy
    namespace: default
  version: v1alpha1
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ec-operator-validation-webhook
webhooks:
- name: operator.enonic.cloud
  rules:
    - apiGroups: ["enonic.cloud"]
      operations: ["*"]
      apiVersions: ["*"]
      resources: ["xp7deployments", "xp7vhosts", "xp7apps", "xp7configs", "domains"]
      scope: "*"
  admissionReviewVersions: ["v1"]
  failurePolicy: Fail
  sideEffects: None
  timeoutSeconds: 5
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZHVENDQXdHZ0F3SUJBZ0lVYWFNT0NySHl4alQyVGRkZkdCa0gzUlZLSS9Nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JjSEp2ZUhrdVpHVm1ZWFZzZEM1emRtTXdIaGNOTWpBd05qRTNNVEV5TWpRMwpXaGNOTXpBd05qRTFNVEV5TWpRM1dqQWNNUm93R0FZRFZRUUREQkZ3Y205NGVTNWtaV1poZFd4MExuTjJZekNDCkFpSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBTUU5VE1vZk1yWjhWWWxOcWFmcS9qaGUKbnFGZFVsUW9MZ044dWJuYmNYTVlSSFpoVm5ydGI5K3IwV3JBaThQMVNGck8rMWdYYWtpRDI3Qis2M201RUtubgpOb0ZrdVFDOVRnU [...]
    service:
      name: kubernetes
      namespace: default
      path: /apis/operator.enonic.cloud/v1alpha1/validations
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ec-operator-mutation-webhook
webhooks:
  - name: operator.enonic.cloud
    rules:
      - apiGroups: ["enonic.cloud"]
        operations: ["*"]
        apiVersions: ["*"]
        resources: ["xp7deployments", "xp7vhosts", "xp7apps", "xp7configs", "domains"]
        scope: "*"
      - apiGroups: ["networking.k8s.io"]
        operations: ["*"]
        apiVersions: ["v1beta1"]
        resources: ["ingresses"]
        scope: "*"
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZHVENDQXdHZ0F3SUJBZ0lVYWFNT0NySHl4alQyVGRkZkdCa0gzUlZLSS9Nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hERWFNQmdHQTFVRUF3d1JjSEp2ZUhrdVpHVm1ZWFZzZEM1emRtTXdIaGNOTWpBd05qRTNNVEV5TWpRMwpXaGNOTXpBd05qRTFNVEV5TWpRM1dqQWNNUm93R0FZRFZRUUREQkZ3Y205NGVTNWtaV1poZFd4MExuTjJZekNDCkFpSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnSVBBRENDQWdvQ2dnSUJBTUU5VE1vZk1yWjhWWWxOcWFmcS9qaGUKbnFGZFVsUW9MZ044dWJuYmNYTVlSSFpoVm5ydGI5K3IwV3JBaThQMVNGck8rMWdYYWtpRDI3Qis2M201RUtubgpOb0ZrdVFDOVR [...]
      service:
        name: kubernetes
        namespace: default
        path: /apis/operator.enonic.cloud/v1alpha1/mutations
# kubectl run --rm --restart=Never --image-pull-policy=IfNotPresent -i -t --image gbbirkisson/httpie test2 -- --verify=no -b https://proxy.default.svc.cluster.local/apis/operator.enonic.cloud/v1alpha1
