src/test/kubernetes/service.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "operator"
  namespace: "default"
spec:
  ports:
    - name: "operator"
      protocol: "TCP"
      port: 443
      targetPort: 8443
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "operator"
  namespace: "default"
subsets:
  - addresses:
      - ip: "#IP#"
    ports:
      - port: 8443
        name: "operator"
---
apiVersion: apiregistration.k8s.io/v1
kind: APIService
metadata:
  name: v1alpha1.operator.enonic.cloud
spec:
  group: operator.enonic.cloud
  groupPriorityMinimum: 1000
  versionPriority: 15
  caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVU2JiOUJwamp5eTlWQ3hxR3U0eStBZ1M0aXBnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xiWGxoZFhSb2IzSnBkSGt3SGhjTk1qRXdNakU0TVRjeE56QTVXaGNOTXpFdwpNakUyTVRjeE56QTVXakFXTVJRd0VnWURWUVFEREF0dGVXRjFkR2h2Y21sMGVUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFNTndhTWVaSVRnMjJJbDNldFo5cXFOWDM0WmFtRllkVHJLdk5EbE4KQnkxaFE0TXZPNElZemxLbUpHSWFXb2d1dWJkZVhzbWxhRWNIWU5oS2dYYTFGVUdTSE05bDRiTlhaN2ZOVSthMwpvYnJQSlZUZUx5Mlh [...]
  service:
    name: "operator"
    namespace: "default"
  version: v1alpha1
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: operator
webhooks:
- name: operator.enonic.cloud
  rules:
    - apiGroups: ["enonic.cloud"]
      operations: ["*"]
      apiVersions: ["*"]
      resources: ["xp7deployments", "xp7vhosts", "xp7apps", "xp7configs", "domains"]
      scope: "*"
  admissionReviewVersions: ["v1"]
  failurePolicy: Fail
  sideEffects: None
  timeoutSeconds: 5
  clientConfig:
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVU2JiOUJwamp5eTlWQ3hxR3U0eStBZ1M0aXBnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xiWGxoZFhSb2IzSnBkSGt3SGhjTk1qRXdNakU0TVRjeE56QTVXaGNOTXpFdwpNakUyTVRjeE56QTVXakFXTVJRd0VnWURWUVFEREF0dGVXRjFkR2h2Y21sMGVUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFNTndhTWVaSVRnMjJJbDNldFo5cXFOWDM0WmFtRllkVHJLdk5EbE4KQnkxaFE0TXZPNElZemxLbUpHSWFXb2d1dWJkZVhzbWxhRWNIWU5oS2dYYTFGVUdTSE05bDRiTlhaN2ZOVSthMwpvYnJQSlZUZUx5M [...]
    service:
      name: "operator"
      namespace: "default"
      path: /apis/operator.enonic.cloud/v1alpha1/validations
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: operator
webhooks:
  - name: operator.enonic.cloud
    rules:
      - apiGroups: ["enonic.cloud"]
        operations: ["*"]
        apiVersions: ["*"]
        resources: ["xp7deployments", "xp7vhosts", "xp7apps", "xp7configs", "domains"]
        scope: "*"
      - apiGroups: ["networking.k8s.io"]
        operations: ["*"]
        apiVersions: ["v1beta1"]
        resources: ["ingresses"]
        scope: "*"
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVU2JiOUJwamp5eTlWQ3hxR3U0eStBZ1M0aXBnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xiWGxoZFhSb2IzSnBkSGt3SGhjTk1qRXdNakU0TVRjeE56QTVXaGNOTXpFdwpNakUyTVRjeE56QTVXakFXTVJRd0VnWURWUVFEREF0dGVXRjFkR2h2Y21sMGVUQ0NBaUl3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFNTndhTWVaSVRnMjJJbDNldFo5cXFOWDM0WmFtRllkVHJLdk5EbE4KQnkxaFE0TXZPNElZemxLbUpHSWFXb2d1dWJkZVhzbWxhRWNIWU5oS2dYYTFGVUdTSE05bDRiTlhaN2ZOVSthMwpvYnJQSlZUZUx [...]
      service:
        name: "operator"
        namespace: "default"
        path: /apis/operator.enonic.cloud/v1alpha1/mutations
